[gd_scene load_steps=3 format=3 uid="uid://p3q8tcvu7d0m"]

[ext_resource type="Script" path="res://scenes/grid.gd" id="1_5xjxb"]
[ext_resource type="PackedScene" uid="uid://dk06xy8jfk211" path="res://scenes/item.tscn" id="2_1l0gd"]

[node name="Grid" type="Node2D"]
script = ExtResource("1_5xjxb")

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 600.0
offset_top = 100.0
offset_right = 1100.0
offset_bottom = 600.0
columns = 5

[node name="ColorRect1" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect2" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect3" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect4" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect5" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect6" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect7" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect8" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect9" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect10" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect11" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect12" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect13" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect14" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect15" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect16" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect17" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect18" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect19" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect20" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect21" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect22" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect23" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect24" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect25" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="Item" parent="." instance=ExtResource("2_1l0gd")]

[node name="End" type="Label" parent="."]
visible = false
offset_left = 428.0
offset_top = 593.0
offset_right = 565.0
offset_bottom = 616.0
text = "Item Synthesized!"

[node name="ProgressRed" type="Label" parent="."]
offset_left = 572.0
offset_top = 99.0
offset_right = 709.0
offset_bottom = 122.0
text = "0"

[node name="ProgressBlue" type="Label" parent="."]
offset_left = 572.0
offset_top = 117.0
offset_right = 709.0
offset_bottom = 140.0
text = "0"

[node name="ProgressGreen" type="Label" parent="."]
offset_left = 572.0
offset_top = 137.0
offset_right = 709.0
offset_bottom = 160.0
text = "0"

[node name="ProgressYellow" type="Label" parent="."]
offset_left = 572.0
offset_top = 157.0
offset_right = 709.0
offset_bottom = 180.0
text = "0"

[node name="ProgressPurple" type="Label" parent="."]
offset_left = 572.0
offset_top = 178.0
offset_right = 709.0
offset_bottom = 201.0
text = "0"

[node name="LabelRed" type="Label" parent="."]
offset_left = 515.0
offset_top = 99.0
offset_right = 652.0
offset_bottom = 122.0
text = "Red:"

[node name="LabelBlue" type="Label" parent="."]
offset_left = 515.0
offset_top = 117.0
offset_right = 652.0
offset_bottom = 140.0
text = "Blue:"

[node name="LabelGreen" type="Label" parent="."]
offset_left = 515.0
offset_top = 137.0
offset_right = 652.0
offset_bottom = 160.0
text = "Green:"

[node name="LabelYellow" type="Label" parent="."]
offset_left = 515.0
offset_top = 157.0
offset_right = 652.0
offset_bottom = 180.0
text = "Yellow:"

[node name="LabelPurple" type="Label" parent="."]
offset_left = 515.0
offset_top = 178.0
offset_right = 652.0
offset_bottom = 201.0
text = "Purple:"
